--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -25,13 +25,11 @@ jobs:
           push: true
           tags: davidbalko10/ip-app:${{ github.sha }}
       - name: Generate Trivy Vulnerability Report
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: 'davidbalko10/ip-app:${{ github.sha }}'
-          scan-type: "image"
           output: trivy-report.json
           format: json
-          scan-ref: .
           exit-code: 0
           vuln-type: 'os,library'
       - name: Upload Vulnerability Scan Results
@@ -40,15 +38,13 @@ jobs:
           name: trivy-report
           path: trivy-report.json
           retention-days: 30
-
       - name: Fail build on High/Criticial Vulnerabilities
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: 'davidbalko10/ip-app:${{ github.sha }}'
+          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
           vuln-type: 'os,library'
-          scan-type: "image"
-          format: table
-          scan-ref: .
-          severity: HIGH,CRITICAL
-          exit-code: 1
+          severity: 'CRITICAL,HIGH'
           skip-setup-trivy: true
